# data-challenge

./: .env.example  .gitignore  README.md  dvc.yaml  pyproject.toml
.dvc/: config
config/: paths.py
constants/: constants.py  intermediate_names.py  paths.py  processed_names.py  raw_names.py
data/: raw.dvc
docs/: DATA_DESCRIPTION.md  DVC_WORKFLOW.md  PROJECT_OWNER_CHECKLIST.md  SETUP.md
notebooks/: eda.ipynb
notebooks/eda/: compare_shutdown_vs_capacity_loss.ipynb  eda_electricity_prices.ipynb  eda_external_correlations.ipynb  eda_pc_prices.ipynb  eda_pctype_forecast_ready.ipynb  eda_phenol_acetone_capacity_loss.ipynb
notebooks/feature_selection/: feature_selection.ipynb
notebooks/modeling/: arima_sarima.ipynb  global_models.ipynb  predictions.ipynb
notebooks/strategy/: pricing_strategy_analysis.ipynb
src/data_pipelines/: .gitkeep  multi_intermediate_to_processed.py  raw_to_intermediate.py  uni_intermediate_to_processed.py
src/modeling/: evaluation.py  multivariate_data_prep.py  multivariate_model_training.py
src/utils/: clean_column_names.py  data_preprocessing.py  data_split.py  evaluation.py  feature_engineering.py  multivariate_model_training.py  univariate_model_training.py  univariate_model_training_direct.py
